Application/newapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newapp
  labels:
    app: newapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newapp
  template:
    metadata:
      labels:
        app: newapp
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---

apiVersion: v1
kind: Service
metadata:
  name: newapp
  labels:
    app: newapp
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: newapp
  type: NodePort
---
