Application/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  labels:
    app: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sampleserver
        image: cloud.canister.io:5000/theegid/sample:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      imagePullSecrets:
      - name: docker-credentials    
---

apiVersion: v1
kind: Service
metadata:
  name: sample
  labels:
    app: sample
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: sample
  type: NodePort
---
