Application/withstorage.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileshare
  labels:
    app: fileshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileshare
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fileshare
    spec:
      containers:
        - image: nginx
          name: "http-server"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: pv-storage
              mountPath: "/usr/share/nginx/html"
      volumes:
        - name: pv-storage
          persistentVolumeClaim:
            claimName: pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: fileshare
  labels:
    app: fileshare
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: fileshare
  type: NodePort

---
