Application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-master
  labels:
    app: ingress-master
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress-dflt"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
        - path: /path_pizza
          pathType: ImplementationSpecific
          backend:
            service:
              name: newapp
              port: 
                number: 8080
        - path: /path_soup
          pathType: ImplementationSpecific
          backend:
            service:
              name: newapp2
              port: 
                number: 80
        - path: /path_omelet
          pathType: ImplementationSpecific
          backend:
            service:
              name: sample
              port: 
                number: 8080
        - path: /path_apple
          pathType: ImplementationSpecific
          backend:
            service:
              name: fileshare
              port:
                number: 80
